# rust-ser-deser-benchmark

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/formats/: mod.rs
src/formats/bincode/: mod.rs
src/formats/bson/: mod.rs
src/formats/cbor/: mod.rs
src/formats/csv/: mod.rs
src/formats/json/: mod.rs
src/formats/message_pack/: mod.rs
src/formats/protobuf/: mod.rs
src/formats/protobuf/protos/: tick.proto  tick.rs
src/formats/speedy/: mod.rs
src/structure/: raw_tick.rs  tick.rs
