[package]
name = "rust-ser-deser-benchmark"
version = "0.1.0"
authors = ["master <alxe.master@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
bencher = "0.1.5"

protobuf = { version = "2.8.1", features = ["with-bytes"] }
protoc-rust = "2.8.1"
bson = "0.14.0"
speedy = "0.5.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.41"
csv = "1.1.1"
bincode = "1.2.1"
serde_cbor = "0.10.2"
rmp-serde = "0.14.0"
capnp = "0.11.1"
capnpc = "0.11.1"

xz2 = "0.1.6"
